style.css
/* ... */
.webinar-grid {
  width: 100%;
  max-width: 1170px;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
}

.link-block {
  position: relative;
  width: 30%;
  min-height: 400px;
  text-align: center;
  margin: 20px auto;
  background-color: #ffffff;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    border-radius: 5px 5px 0 0;
  text-decoration: none;
}

.link-block:hover {
  box-shadow: 0 10px 18px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
}

.link-block .dundas-blue-link {
  background: rgba(8, 41, 102, 0.9);
  border: solid 1px rgba(8, 41, 102, 0.9);
  padding: 8px 25px;
  color: #fff!important;
  width: auto;
  text-align: center;
  text-decoration: none;
  font-size: 14px;
  font-weight: 400;
  text-transform: uppercase;
  
}

.link-block .dundas-blue-link:hover {
  background: #fff;
  color: rgba(8, 41, 102, 0.9)!important;
}

.link-block .webinar-image-container {
  width: 100%;
  height: 150px;
  position: relative;
  top: 0;
 }
.webinar-image-container img {
  width: 100%;
  height: auto;
  border-radius: 5px 5px 0 0;
}

.archive {
  display: none;
}


/* .webinar-content-box p {white-space: nowrap;overflow: hidden;text-overflow: ellipsis;} */


/* TABLET PORTRAIT */

@media only screen and (min-width: 569px) and (max-width: 880px) {
  .link-block {
    position: relative;
    width: 45%;
    max-width: 330px;
  }
  .link-block .dundas-blue-text-long {
    font-size: 22px;
  }
}


/* MOBILE LANDSCAPE */

@media only screen and (min-width: 0) and (max-width: 568px) {
  .link-block {
    position: relative;
    width: 90%;
    max-width: 300px;
  }
  .link-block .dundas-blue-text-long {
    font-size: 18px;
  }
  .logofinal{
    margin-right: 36.5%;
  }
  iframe{
      width:400px;
      height:250px;
      padding: 10px;
    }
}

.videoWrapper {
  height: auto;
  width: 723px;
  position: relative;
  overflow: hidden;
}

.videoWrapper iframe {
  height: 100%;
  width: 100%;
  top: 0;
  bottom: 0;
}
.container1{
  text-align: center;
  overflow: hidden;
  width: 800px;
  margin: 0 auto;
}

.container1 table {
  width: 100%;
}

.container1 td, .container1 th {
  padding: 10px;
}

.container1 td:first-child, .container1 th:first-child {
  padding-left: 20px;
}

.container1 td:last-child, .container1 th:last-child {
  padding-right: 20px;
}

.container1 th {
  border-bottom: 1px solid #ddd;
  position: relative;
}
footer {
  margin-top: 150px;
  text-align: left;
  padding: 2px;
  background-color: rgb(235, 235, 235);
  color: rgb(0, 0, 0);
  font-size: 13px;
 
}
#disclaimer{

  margin-top: 70px;
  margin-bottom: 50px;
  margin-left: 50px;
  margin-right: 50px;
}
/* Set a specific color for each brand */

/* Facebook */
.fa-facebook {
  color: #3B5998;
  margin-right: 30px;
}
/* Twitter */
.fa-twitter {
  color: #55ACEE;
  margin-right:30px;
}
.fa-instagram{
  color:rgb(240, 15, 128);
  margin-right:30px;
}
.fa-linkedin{
  color:#3B5998;
  margin-right:30px;
}


.icons{
  text-align: center;
  font-size: 20px;
}
.btn {
  background-color: white;
  color: black;
  border: 2px solid #e7e7e7;
  
}
.btn a{
  font-size: 6px;
 color: black;
 text-decoration-line: none;
}

.btn:hover {background-color: #e7e7e7;}
#dr{
  background-color: rgb(5, 5, 110);
  color: white;
  text-align: center;
  padding:5px;
  font-family: monospace;
}
#dr:hover{
  background-color: grey;
}
.btns{
  text-align: center;
}
  .your-centered-div {
    margin: 50px;
    margin-left: 300px;
    }
    iframe{
      width:700px;
      height:400px;
    }
@media screen and (max-width: 480px) {
.your-centered-div {
    margin-left:  4.5%;

    }
    iframe{
      width:380px;
      height:250px;
      padding: 10px;
    }  
}
/* .carousel {
    margin-left: 15%;
    margin-right: 15%;
} */

ul.slides {
    display: block;
    position: relative;
    height: 600px;
    margin: 0;
    padding: 0;
    overflow: hidden;
    list-style: none;
}

.slides * {
    user-select: none;
    -ms-user-select: none;
    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    -webkit-touch-callout: none;
}

ul.slides input {
    display: none; 
}


.slide-container { 
    display: block; 
}

.slide-image {
    display: block;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    opacity: 0;
    transition: all .7s ease-in-out;
}   

.slide-image img {
    width: auto;
    min-width: 100%;
    height: 100%;
}
/* 
.carousel-controls {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: 999;
    font-size: 100px;
    line-height: 600px;
    color: #fff;
}

.carousel-controls label {
    display: none;
    position: absolute;
    padding: 0 20px;
    opacity: 0;
    transition: opacity .2s;
    cursor: pointer;
}

.slide-image:hover + .carousel-controls label{
    opacity: 0.5;
}

.carousel-controls label:hover {
    opacity: 1;
}

.carousel-controls .prev-slide {
    width: 49%;
    text-align: left;
    left: 0;
}

.carousel-controls .next-slide {
    width: 49%;
    text-align: right;
    right: 0;
}

.carousel-dots {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 20px;
    z-index: 999;
    text-align: center;
}

.carousel-dots .carousel-dot {
    display: inline-block;
    width: 20px;
    height: 20px;
    border-radius: 50%;
    background-color: #fff;
    opacity: 0.5;
    margin: 10px;
}

input:checked + .slide-container .slide-image {
    opacity: 1;
    transform: scale(1);
    transition: opacity 1s ease-in-out;
}

input:checked + .slide-container .carousel-controls label {
     display: block; 
}

input#img-1:checked ~ .carousel-dots label#img-dot-1,
input#img-2:checked ~ .carousel-dots label#img-dot-2,
input#img-3:checked ~ .carousel-dots label#img-dot-3,
input#img-4:checked ~ .carousel-dots label#img-dot-4,
input#img-5:checked ~ .carousel-dots label#img-dot-5,
input#img-6:checked ~ .carousel-dots label#img-dot-6 {
	opacity: 1;
} */
/* ... */

